pass STATIC_URL into the Mustache templates

--- a/media/templates/asset_annotation_current.mustache
+++ b/media/templates/asset_annotation_current.mustache
@@ -23,7 +23,7 @@
     <div class="actions">
       <input id="annotation-view-help-button" type="image" title="Help"
       onclick="return jQuery('#instructions').toggle();"
-      alt="Help" src="/media/img/icons/meth_help.png" />
+      alt="Help" src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_help.png" />
     </div>
 
     <h2>
