--- a/media/templates/asset_view_help.mustache
+++ b/media/templates/asset_view_help.mustache
@@ -8,7 +8,7 @@
     <input class="dismiss-help" type="image"
     title="Dismiss help"
     onclick="return annotationList.dismissHelp(this);"
-    alt="Dismiss Help" src="/media/img/icons/meth_help.png" />
+    alt="Dismiss Help" src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_help.png" />
 </div>
 
 <div id="asset-view-help"
@@ -17,16 +17,16 @@
       How to analyze this item
     </h3>
     <div class="asset-view-help-instructions">
-      Click the [<img alt="Pencil Icon" src="/media/img/icons/meth_edit.png" />] icon to add tags and notes to whole items.
+      Click the [<img alt="Pencil Icon" src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_edit.png" />] icon to add tags and notes to whole items.
     </div>
     <h3>
       How to work with item selections
     </h3>
     <div class="asset-view-help-instructions">
       <div>
-        Click the [<img alt="Create Selection" src="/media/img/icons/meth_addselection.png" />] icon to add a selection.
+        Click the [<img alt="Create Selection" src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_addselection.png" />] icon to add a selection.
       </div>
-      <div>Click the [<img alt="Pencil Icon" src="/media/img/icons/meth_edit.png" />] icon to edit a selection.</div>
+      <div>Click the [<img alt="Pencil Icon" src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_edit.png" />] icon to edit a selection.</div>
       <div>Click the View button to group selections by author or tag.</div>
     </div>
 
