--- a/media/templates/collection_assets.mustache
+++ b/media/templates/collection_assets.mustache
@@ -56,20 +56,20 @@
                 <div class="actions">
                     {{#editable}}
                         <a class="collection-choice delete-asset" href="{{id}}" title="Remove item from your collection">
-                            <img src="/media/img/icons/meth_delete.png" class="delete_icon" alt="Remove item from your collection"  />
+                            <img src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_delete.png" class="delete_icon" alt="Remove item from your collection"  />
                         </a>
                         <a class="collection-choice edit-asset" href="{{id}}" title="Quick edit item attributes">
-                            <img src="/media/img/icons/meth_edit.png" class="edit_icon" alt="Edit item attributes"  />
+                            <img src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_edit.png" class="edit_icon" alt="Edit item attributes"  />
                         </a>
                     {{/editable}}
                     <a class="collection-choice create-annotation" href="{{id}}" title="Create selection on this item">
-                        <img src="/media/img/icons/meth_addselection.png" class="create_annotation_icon" alt="Create selection"  />
+                        <img src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_addselection.png" class="create_annotation_icon" alt="Create selection"  />
                     </a>
                 </div>
                 {{#citable}}
                     <span class="citationTemplate">
                         <img class="materialCitation clickableCitation" alt=""
-                        src="/media/img/icons/meth_insert_{{media_type_label}}.png#annotation={{local_url}}&title={{title}}&type={{primary_type}}&range1=0"
+                        src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_insert_{{media_type_label}}.png#annotation={{local_url}}&title={{title}}&type={{primary_type}}&range1=0"
                         title="Add item to the composition"
                         name="{{local_url}}"/>
                     </span>
@@ -147,7 +147,7 @@
                                                 {{#citable}}
                                                     <span class="citationTemplate">
                                                         <img class="materialCitation clickableCitation" alt=""
-                                                        src="/media/img/icons/meth_insert_selection.png#annotation={{url}}&title={{metadata.title}}&type={{metadata.primary_type}}&range1={{range1}}"
+                                                        src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_insert_selection.png#annotation={{url}}&title={{metadata.title}}&type={{metadata.primary_type}}&range1={{range1}}"
                                                         title="Add selection to the composition"
                                                         name="{{url}}"/>
                                                     </span>
@@ -174,10 +174,10 @@
                                                 <td class="selection-trash">
                                                     <div class="actions">
                                                         <a class="collection-choice delete-annotation" href="{{id}}" title="Delete selection">
-                                                            <img src="/media/img/icons/meth_delete.png"  class="delete_icon" alt="Delete selection"  />
+                                                            <img src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_delete.png"  class="delete_icon" alt="Delete selection"  />
                                                         </a>
                                                         <a class="collection-choice edit-annotation" href="{{id}}" title="Quick edit selection attributes">
-                                                            <img src="/media/img/icons/meth_edit.png" class="edit_icon edit-selection-icon" alt="Edit selection attributes" />
+                                                            <img src="{{#staticUrl}}{{/staticUrl}}img/icons/meth_edit.png" class="edit_icon edit-selection-icon" alt="Edit selection attributes" />
                                                         </a>
                                                     </div>
                                                 </td>
