--- a/media/templates/project.mustache
+++ b/media/templates/project.mustache
@@ -1,7 +1,7 @@
     <td class="panhandle-left-container">
         <div class="panhandle-left {{context.project.type}}"></div>
     </td>
-    
+
     <td class="panhandle-stripe {{context.project.type}}">
         <div class="label">{{panel_state_label}} {{context.project.description}}</div>
     </td>
@@ -32,16 +32,15 @@
                                             | Version {{context.project.modified}}
                                         </span>
                                     {{/context.project.current_version}}
-                                    
-                                    
+
                                     <a class="project-export" href="/project/export/msword/{{context.project.id}}/"
                                         {{#context.project.is_assignment}}style="display: none"{{/context.project.is_assignment}}>
-                                        <img class="project-export-icon" src="/media/img/export.jpeg"/>
+                                        <img class="project-export-icon" src="{{#staticUrl}}{{/staticUrl}}img/export.jpeg"/>
                                     </a>
-                                                                    
+
                                     <a class="project-print" href="/project/export/html/{{context.project.id}}/" target="_blank"
                                         {{#context.project.is_assignment}}style="display: none"{{/context.project.is_assignment}}>
-                                        <img class="project-print-icon" src="/media/img/printer.png"/>
+                                        <img class="project-print-icon" src="{{#staticUrl}}{{/staticUrl}}img/printer.png"/>
                                     </a>
                                 </div>
                             {{/context.project.visibility}}
@@ -56,7 +55,6 @@
                                             type="submit">
                                             Save
                                         </button>
-                                            
                                             <div class="save-publish-status" style="display: none" title="Save Changes">
                                                 <div class="well">
                                                     <div class="right small">required</div>
@@ -86,7 +84,7 @@
                                                 {{/is_faculty}}
                                                 {{/context.project.is_assignment}}
                                             </div> 
-                                    
+
                                             <button
                                                 class="{{context.project.type}} project project-previewbutton btn btn-default btn-xs"
                                                 type="submit">
@@ -97,16 +95,16 @@
                                                     Edit
                                                 {{/context.editing}}
                                             </button>
-                                    
+
                                             <button class="{{context.project.type}} project project-revisionbutton btn btn-default btn-xs"
                                             type="button">
                                             Revisions
                                             </button>
-                                        
+
                                         <div id="project-revisions" class="revision-list" style="display: none" title="Revisions">
                                         </div>
                                     {{/context.can_edit}}
-                                    
+
                                     {{#context.project.is_assignment}}
                                         {{^is_faculty}}
                                             {{^context.my_responses.length}}
@@ -119,7 +117,7 @@
                                             {{/context.my_responses.length}}
                                         {{/is_faculty}}
                                     {{/context.project.is_assignment}}
-                                    
+
                                     {{#context.my_response}}
                                         {{^context.viewing_my_response}}
                                             <button class="project project-my-response btn btn-default btn-xs"
@@ -128,7 +126,7 @@
                                             </button>
                                         {{/context.viewing_my_response}}
                                     {{/context.my_response}}
-                                    
+
                                     {{#context.my_responses.length}}
                                         <button class="project project-my-responses btn btn-default btn-xs"
                                             type="button">
@@ -168,7 +166,7 @@
                                         </select>
                                       </div>
                                     {{/context.responses.length}}
-                                    
+
                                     {{#context.create_instructor_feedback}}
                                         <button class="{{context.project.type}} project project-create-instructor-feedback btn btn-default btn-xs"
                                             type="button">
@@ -176,7 +174,7 @@
                                         </button>
                                     {{/context.create_instructor_feedback}}
 
-                                </div>     
+                                </div>
                             </div>
                             <div class="panel-subcontainer-title">
                                 {{#context.can_edit}}
@@ -188,11 +186,11 @@
                                     {{context.project.title}}
                                 </h1>
                             </div>
-                            
+
                         </td>
                     </tr>
-    
-                    <tr class="project-participant-row">                                      
+
+                    <tr class="project-participant-row">
                         <td colspan="5" style="padding-top: 5px">
                             {{#context.can_edit}}
                                 <button class="project participants_toggle btn btn-default btn-xs"
@@ -201,7 +199,7 @@
                                     style="float: left; display: {{#context.editing}}block{{/context.editing}}{{^context.editing}}none{{/context.editing}}">
                                     +/- Author
                                 </button>
-                                    
+
                                 <div class="participant_list" style="display: none" title="Update Authors">
                                     <div>{{{context.form.participants}}}</div>
                                 </div>
@@ -215,7 +213,7 @@
                             </h5>
                         </td>
                     </tr>
-                    
+
                     <tr class="project-content-row">
                         <td class="panel-content 
                             {{#context.editing}}fluid{{/context.editing}}{{^context.editing}}fixed{{/context.editing}} 
@@ -247,22 +245,22 @@
                                         <div class="collection_button">
                                             <a href="/asset/">View Full Collection</a>
                                         </div>
-                                    </div>                            
+                                    </div>
                                     Collection
                                 </h2>
                                 <div class="ajaxloader">
                                     <div class="message">
-                                    <img alt="Loading..." src="/media/img/ajax-loader.gif">
+                                    <img alt="Loading..." src="{{#staticUrl}}{{/staticUrl}}img/ajax-loader.gif">
                                     <br /><br />
                                     <div>Refreshing the collection</div>
                                     </div>
-                                </div>                                
+                                </div>
                                 <div id="{{context.project.id}}-collection_table" class="collection_table"></div>
                             </div>
                             {{/context.can_edit}}
                             <div class="asset-view-published" 
                                 style="display: {{#context.editing}}none{{/context.editing}}{{^context.editing}}block{{/context.editing}}">
-                                
+
                                 <div id="{{context.project.id}}-videoclipbox" class="videoclipbox" style="display: none;">
                                     <div class="annotation-title publishedCitation" style="margin-left: 5px; margin-top: 5px;"></div>
                                     <div class="asset-title" style="margin-left: 5px; margin-bottom: 5px; margin-top: 5px; font-size: 80%;"></div>
@@ -284,9 +282,8 @@
             </form>
         </div>
     </td>
-    
+
     <td class="pantab-container">
         <div class="pantab {{context.project.type}} {{panel_state}}"></div>
         <div id="loaded"></div>
     </td>
-    
