--- a/mediathread/templates/projects/project.html
+++ b/mediathread/templates/projects/project.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block uncompressable_css %}
-    <link rel="stylesheet" href="/media/admin/css/widgets.css" media="screen" />
+    <link rel="stylesheet" href="{{STATIC_URL}}admin/css/widgets.css" media="screen" />
 {% endblock %}
 
 {% block js %}
@@ -26,12 +26,13 @@
 {% endblock %}
 
 {% block uncompressable_js %}
+    {% include "djangosherd/player_resources.html" %}
     <!--  admin functionality for the select box -->
-    <script type="text/javascript" src="/media/admin/js/jquery.js"></script>
-    <script type="text/javascript" src="/media/admin/js/jquery.init.js"></script>
-    <script type="text/javascript" src="/media/admin/js/core.js"></script>
-    <script type="text/javascript" src="/media/admin/js/SelectFilter2.js"></script>
-    <script type="text/javascript" src="/media/admin/js/SelectBox.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.init.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/core.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/SelectFilter2.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/SelectBox.js"></script>
 
     <!-- required project functionality -->
     <script type="text/javascript" src="{{STATIC_URL}}js/select2/select2.min.js"></script>
