--- a/mediathread/templates/500.html
+++ b/mediathread/templates/500.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>Mediathread &mdash; 500 Server Error</title>
-    <link rel="stylesheet" href="/media/css/mediathread.css" media="screen" />
+    <link rel="stylesheet" href="{{STATIC_URL}}css/mediathread.css" media="screen" />
 </head>
 
 <body class="one_column">
@@ -11,7 +11,7 @@
             <div id="standardnav_container">
                 <div id="mediathread_logo">
                     <a href="/">
-                        <img src="/media/img/logo_mediathread_new.png" alt="mediathread logo" width="156" height="45" />
+                        <img src="{{STATIC_URL}}img/logo_mediathread_new.png" alt="mediathread logo" width="156" height="45" />
                     </a>
                 </div>
             </div>
