--- a/mediathread/templates/assetmgr/asset_embed_list.html
+++ b/mediathread/templates/assetmgr/asset_embed_list.html
@@ -24,6 +24,7 @@
 {% endblock %}
 
 {% block uncompressable_js %}
+    {% include "djangosherd/player_resources.html" %}
     <!-- required project functionality -->
     <script type="text/javascript" src="{{STATIC_URL}}js/select2/select2.min.js"></script>
 
