--- a/mediathread/templates/discussions/discussion.html
+++ b/mediathread/templates/discussions/discussion.html
@@ -24,6 +24,7 @@
 {% endblock %}
 
 {% block uncompressable_js %}
+    {% include "djangosherd/player_resources.html" %}
     <script type="text/javascript" src="{{STATIC_URL}}js/select2/select2.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}jquery/js/masonry.pkgd.min.js"></script>
 
