--- a/mediathread/templates/main/stats.html
+++ b/mediathread/templates/main/stats.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block js %}
+{% block uncompressable_js %}
 <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.3/themes/base/jquery-ui.css" type="text/css" media="all" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" ></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
