--- a/mediathread/templates/projects/selection_assignment_edit.html
+++ b/mediathread/templates/projects/selection_assignment_edit.html
@@ -27,6 +27,8 @@
 {% endblock %}
 
 {% block uncompressable_js %}
+    {% include "djangosherd/player_resources.html" %}
+
     <!-- required project functionality -->
     <script type="text/javascript" src="{{STATIC_URL}}js/select2/select2.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/lib/sherdjs/lib/tinymce/tinymce.min.js"></script>
@@ -70,7 +72,7 @@
                         Edit Selection Assignment
                         {% if form.instance.id %}
                         <a class="right" href="{% url 'project-workspace' form.instance.id %}">
-                            <img alt="Edit" src="/media/img/icons/meth_view.png"></span>
+                            <img alt="Edit" src="{{STATIC_URL}}img/icons/meth_view.png"></span>
                         </a>
                         {% endif %}
                     </h2>
