Add download button to flowplayer view - PMT #107724
This is currently hidden as I'm figuring out how to only display this
for instructors.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4388,3 +4388,8 @@ ul.section-tabs>li>a.active {
     background-color: #1b75bc;
     color: white;
 }
+
+.sherd-flowplayer-download-btn {
+    display: none;
+    margin-right: 10px;
+}
