--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4390,6 +4390,7 @@ ul.section-tabs>li>a.active {
 }
 
 .sherd-flowplayer-download-btn {
+    display: none;
     font-size: 1.5em;
     margin: 10px;
     float: right;
